wip pwa and mobile

--- a/mobile-template/package.json
+++ b/mobile-template/package.json
@@ -6,6 +6,7 @@
     "start": "expo start",
     "dev": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
+    "restart-metro": "node ./scripts/restart-metro.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -22,8 +23,8 @@
     "@getalby/lightning-tools": "^5.0.3",
     "@getalby/sdk": "^3.6.1",
     "@noble/curves": "^1.4.0",
-    "@nostr-dev-kit/ndk": "^2.10.0",
-    "@nostr-dev-kit/ndk-wallet": "^0.2.0",
+    "@nostr-dev-kit/ndk": "^2.14.9",
+    "@nostr-dev-kit/ndk-wallet": "^0.5.13",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/netinfo": "11.3.1",
     "@react-native-picker/picker": "2.7.5",
@@ -32,7 +33,8 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^6.3.29",
-    "@scure/bip39": "^1.5.0",
+    "@scure/bip39": "^1.6.0",
+    "@scure/bip32": "^1.7.0",
     "@starknet-react/chains": "^3.1.0",
     "@starknet-react/core": "^3.7.2",
     "@tanstack/react-query": "^5.40.0",
