--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -62,7 +62,9 @@
     "wagmi": "^2.13.4",
     "yup": "^1.6.1",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "@capacitor/core":"7.2.0"
+
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -78,6 +80,7 @@
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@capacitor/cli":"7.2.0"
   }
 }
