--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "export-extension": "cd /apps/extensions && pnpm run build build && next export && cp -r extension/* out/",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate",
-    "prepare": "husky"
+    "_prepare": "husky"
   },
   "dependencies": {
     "@babel/core": "^7.20.0",
