--- a/packages/pixel_component/package.json
+++ b/packages/pixel_component/package.json
@@ -34,7 +34,7 @@
     "build": "pnpm run build:css && tsup src/index.ts src/native.ts --format esm,cjs --dts --external react --external react-dom --external react-native --external react-native-webview --external @cartridge/connector --external @cartridge/controller --external @starknet-react/chains --external @starknet-react/core --external starknet --external starknetkit && cp -r src/styles dist/",
     "build:css_all": "NODE_ENV=production tailwindcss -i src/styles/index.css -o dist/styles/index.css --minify && NODE_ENV=production TAILWIND_MODE=native tailwindcss -i src/styles/index.css -o dist/styles/native.css --minify",
     "build:css": "NODE_ENV=production tailwindcss -i src/styles/index.css -o dist/styles/index.css --minify",
-    "prepare": "npm run build",
+    "_prepare": "npm run build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix"
