--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-node-linker=isolated
-shamefully-hoist=false
+# node-linker=isolated
+shamefully-hoist=true
 strict-peer-dependencies=false
-package-manager=pnpm@8.15.9
+package-manager=pnpm@10.10.0
