--- a/mobile-template/package.json
+++ b/mobile-template/package.json
@@ -38,9 +38,7 @@
     "@starknet-react/chains": "^3.1.0",
     "@starknet-react/core": "^3.7.2",
     "@tanstack/react-query": "^5.40.0",
-    "afk_nostr_sdk": "workspace:*",
     "bip39": "^3.1.0",
-    "common": "workspace:*",
     "crypto-es": "^2.1.0",
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
@@ -82,7 +80,6 @@
     "react-dom": "19.0.0",
     "react-markdown-editor-lite": "^1.3.4",
     "react-native": "0.79.2",
-    "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-keychain": "^8.2.0",
@@ -108,10 +105,11 @@
     "socket.io-client": "^4.8.1",
     "starknet": "6.11.0",
     "starknetkit": "^2.6.1",
-    "tailwindcss": "3.3.2",
     "viem": "2.21.60",
     "wagmi": "^2.12.8",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "afk_nostr_sdk": "workspace:*",
+    "common": "workspace:*"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -123,5 +121,7 @@
     "metro-react-native-babel-transformer": "^0.77.0",
     "typescript": "~5.8.3"
   },
-  "private": true
+  "private": true,
+  "packageManager": "pnpm@10.10.0",
+  "pnpm": {}
 }
