--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -67,7 +67,8 @@
     "yup": "^1.6.1",
     "zod": "^3.23.8",
     "zustand": "^4.5.2",
-    "@capacitor/core":"7.2.0"
+    "@capacitor/core":"7.2.0",
+    "classnames":"2.5.1"
 
   },
   "devDependencies": {
