--- a/apps/pwa/tsconfig.json
+++ b/apps/pwa/tsconfig.json
@@ -9,7 +9,7 @@
     "module": "esnext",
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": true,
+    "strict": false,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
