--- a/apps/algo-backend/package.json
+++ b/apps/algo-backend/package.json
@@ -46,7 +46,8 @@
     "common": "workspace:*",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.37.0",
+    "drizzle-kit": "^0.29.0",
+    "drizzle-orm": "^0.40.1",
     "fastify": "^5.1.0",
     "fastify-plugin": "^5.0.1",
     "fastify-socket.io": "^5.1.0",
