--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -33,14 +33,12 @@
     "@fastify/session": "^11.0.1",
     "@fastify/static": "7.0.4",
     "@funkit/api-base": "^1.3.2",
-    "@prisma/client": "^5.22.0",
     "@telegraf/types": "^7.1.0",
     "apollo-server": "^3.13.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.40.1",
     "fastify": "^5.1.0",
     "fastify-plugin": "^5.0.1",
     "fastify-socket.io": "^5.1.0",
@@ -61,6 +59,12 @@
     "twilio": "^5.3.5",
     "twitter-api-v2": "^1.18.1",
     "typescript": "^5.6.3"
+  },
+  "peerDependencies": {
+    "drizzle-orm": "^0.40.1",
+    "drizzle-kit": "^0.29.0",
+    "@prisma/client": "^5.22.0",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
