--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -51,7 +51,6 @@
     "get-starknet-core": "^3.3.0",
     "js-sha256": "^0.11.0",
     "@noble/hashes": "1.3.3",
-    "next": "^14.2.3",
     "next-auth": "^4.24.11",
     "qs": "^6.12.3",
     "react": "^19.0.0",
@@ -69,6 +68,11 @@
     "@capacitor/core":"7.2.0",
     "classnames":"2.5.1"
 
+  },
+  "peerDependencies": {
+    "next": "15.1.7",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
