--- a/package.json
+++ b/package.json
@@ -65,7 +65,10 @@
     "@nostr-dev-kit/ndk-wallet": "^0.5.13",
     "drizzle-orm": "^0.40.1",
     "drizzle-kit": "^0.29.0",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "next": "15.1.7",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "peerDependencies": {
     "prisma": "5.22.0",
@@ -82,7 +85,10 @@
     "@nostr-dev-kit/ndk-wallet": "^0.5.13",
     "drizzle-orm": "^0.40.1",
     "drizzle-kit": "^0.29.0",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "next": "15.1.7",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "husky": "^9.1.7",
