--- a/packages/indexer-v2-db/tsconfig.json
+++ b/packages/indexer-v2-db/tsconfig.json
@@ -9,7 +9,8 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "preserveSymlinks": false
   },
   "exclude": [
     "node_modules",
