--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -17,12 +17,12 @@
     "safe-build": "pnpm run build || echo 'Build failed but continuing...'"
   },
   "dependencies": {
+    "@argent/tma-wallet": "1.19.3",
+    "@argent/x-sessions": "^6.7.4",
     "@atomiqlabs/chain-starknet": "^1.0.9",
     "@atomiqlabs/sdk": "^3.0.4",
-    "@argent/tma-wallet": "1.19.3",
-    "react-qr-code": "^2.0.15",
-    "@argent/x-sessions": "^6.7.4",
     "@avnu/avnu-sdk": "^2.0.0",
+    "@capacitor/core": "7.2.0",
     "@cartridge/connector": "^0.7.13",
     "@cartridge/controller": "^0.7.13",
     "@chakra-ui/icons": "^2.2.4",
@@ -31,19 +31,20 @@
     "@chakra-ui/theme-tools": "^2.1.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@noble/hashes": "1.3.3",
     "@nostr-dev-kit/ndk": "^2.14.9",
     "@nostr-dev-kit/ndk-wallet": "^0.5.13",
     "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^2.1.5",
     "@scure/bip32": "^1.7.0",
-    "quill": "2.0.3",
-    "markdown-it": "^14.1.0",
+    "@starknet-io/get-starknet-core": "^4.0.7",
     "@starknet-react/chains": "^0.1.7",
-    "@starknet-react/core": "^2.8.2",
+    "@starknet-react/core": "3.7.4",
     "@tanstack/react-query": "^5.40.0",
     "afk_nostr_sdk": "workspace:*",
     "afk_react_sdk": "workspace:*",
     "axios": "^1.7.2",
+    "classnames": "2.5.1",
     "common": "workspace:*",
     "d3": "^7.9.0",
     "dexie": "^4.0.11",
@@ -51,13 +52,14 @@
     "ethers": "^6.13.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.28",
-    "get-starknet-core": "^3.3.0",
     "js-sha256": "^0.11.0",
-    "@noble/hashes": "1.3.3",
+    "markdown-it": "^14.1.0",
     "next-auth": "^4.24.11",
     "qs": "^6.12.3",
+    "quill": "2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-qr-code": "^2.0.15",
     "react-transition-group": "^4.4.5",
     "react-use-websocket": "^4.8.1",
     "sass": "^1.87.0",
@@ -67,9 +69,7 @@
     "wagmi": "^2.13.4",
     "yup": "^1.6.1",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2",
-    "@capacitor/core":"7.2.0",
-    "classnames":"2.5.1"
+    "zustand": "^4.5.2"
   },
   "peerDependencies": {
     "next": "15.1.7",
@@ -77,6 +77,7 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "7.2.0",
     "@types/node": "^20",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
@@ -90,7 +91,6 @@
     "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5",
-    "web-vitals": "^2.1.4",
-    "@capacitor/cli":"7.2.0"
+    "web-vitals": "^2.1.4"
   }
 }
