--- a/apps/algo-backend/package.json
+++ b/apps/algo-backend/package.json
@@ -41,6 +41,7 @@
     "@pinecone-database/pinecone": "^5.1.1",
     "@prisma/client": "^5.22.0",
     "@telegraf/types": "^7.1.0",
+    "apify-client": "^2.12.4",
     "apollo-server": "^3.13.0",
     "bcryptjs": "^2.4.3",
     "common": "workspace:*",
@@ -64,6 +65,7 @@
     "pg": "^8.13.1",
     "pg-promise": "^11.10.1",
     "prisma-db": "workspace:*",
+    "puppeteer": "^24.8.2",
     "socket.io": "^4.8.1",
     "telegraf": "^4.16.3",
     "twitter-api-v2": "^1.18.1",
