--- a/scripts/package.json
+++ b/scripts/package.json
@@ -47,7 +47,7 @@
     "nodemon": "^3.1.1",
     "nostr-tools": "^2.5.2",
     "path": "^0.12.7",
-    "starknet": "^6.11.0",
+    "starknet": "6.11.0",
     "ws": "^8.17.0"
   },
   "devDependencies": {
