--- a/packages/indexer-v2-db/package.json
+++ b/packages/indexer-v2-db/package.json
@@ -23,10 +23,10 @@
 
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.40.1"
   },
   "peerDependencies": {
-    "drizzle-orm": "^0.40.1",
     "drizzle-kit": "^0.29.0",
     "pg": "^8.13.1"
   },
