--- a/packages/prisma-db/package.json
+++ b/packages/prisma-db/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx prisma generate && npx prisma db pull && tsc",
+    "build": "npx prisma generate && npx prisma db push && tsc",
     "build:push": "npx prisma generate && npx prisma db push && tsc",
     "generate": "npx prisma generate",
     "pull": "npx prisma db pull",
