--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -33,6 +33,7 @@
     "@fastify/session": "^11.0.1",
     "@fastify/static": "7.0.4",
     "@funkit/api-base": "^1.3.2",
+    "@supabase/supabase-js": "^2.49.8",
     "@telegraf/types": "^7.1.0",
     "apollo-server": "^3.13.0",
     "bcryptjs": "^2.4.3",
