--- a/apps/pwa/.env.example
+++ b/apps/pwa/.env.example
@@ -33,3 +33,6 @@ NEXT_PUBLIC_DYNAMIC_API_KEY="dynamic env id"
 NEXT_PUBLIC_DYNAMIC_ENV_ID="dynamic env id"
 
 NEXT_PUBLIC_INDEXER_BACKEND_URL="http://localhost:5050"
+
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
