--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -38,7 +38,12 @@
     "@rainbow-me/rainbowkit": "^2.1.5",
     "@scure/bip32": "^1.7.0",
     "@solana/web3.js": "^1.98.2",
-      "@tanstack/react-query": "^5.40.0",
+    "@starknet-io/get-starknet-core": "4.0.4",
+    "@starknet-react/chains": "^3.1.2",
+    "@starknet-react/core": "^3.7.2",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.8",
+    "@tanstack/react-query": "^5.40.0",
     "afk_nostr_sdk": "workspace:*",
     "afk_react_sdk": "workspace:*",
     "axios": "^1.7.2",
@@ -61,16 +66,13 @@
     "react-transition-group": "^4.4.5",
     "react-use-websocket": "^4.8.1",
     "sass": "^1.87.0",
+    "starknet": "6.21.1",
     "starknetkit": "2.10.4",
     "viem": "~2.21.2",
     "wagmi": "^2.13.4",
     "yup": "^1.6.1",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2",
-    "@starknet-io/get-starknet-core": "4.0.4",
-    "@starknet-react/chains": "^3.1.2",
-    "@starknet-react/core": "^3.7.2",
-    "starknet": "6.21.1"
+    "zustand": "^4.5.2"
   },
   "peerDependencies": {
     "next": "15.1.7",
