--- a/apps/algo-backend/package.json
+++ b/apps/algo-backend/package.json
@@ -49,6 +49,7 @@
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.29.0",
     "drizzle-orm": "^0.40.1",
+    "exa-js": "^1.7.2",
     "fastify": "^5.1.0",
     "fastify-plugin": "^5.0.1",
     "fastify-socket.io": "^5.1.0",
