--- a/packages/pixel_component/tsconfig.json
+++ b/packages/pixel_component/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "lib": ["dom", "esnext"],
+    "lib": [
+      "dom",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
@@ -18,21 +21,36 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react",
+    "jsx": "preserve",
     "declaration": true,
     "outDir": "./dist",
     "rootDir": "./src",
     "baseUrl": ".",
     "module": "ESNext",
     "paths": {
-      "@/*": ["./src/*"],
-      "common/*": ["../common/src/*"]
-    }
+      "@/*": [
+        "./src/*"
+      ],
+      "common/*": [
+        "../common/src/*"
+      ]
+    },
+    "noEmit": true,
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
-    "src/types/*.d.ts"
+    "src/types/*.d.ts",
+    ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
