--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -95,5 +95,6 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5",
     "web-vitals": "^2.1.4"
-  }
+  },
+  "packageManager": "pnpm@10.10.0"
 }
