--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -90,10 +90,11 @@
     "eslint-config-next": "^14.2.4",
     "framer-motion": "^11.2.4",
     "postcss": "^8.4.38",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5",
     "web-vitals": "^2.1.4"
-  }
+  },
+  "packageManager": "pnpm@10.10.0"
 }
