--- a/apps/data-backend/.env.example
+++ b/apps/data-backend/.env.example
@@ -48,7 +48,10 @@ TWITTER_CALLBACK_URL="http://localhost:8081/app/SocialPayment"
 TWITTER_CLIENT_ID=""
 TWITTER_CLIENT_SECRET=""
 
+PINATA_API_KEY=""
 
+PINATA_SECRET_API_KEY=""
+IPFS_GATEWAY="https://ipfs.io"
 
 
 
