--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -34,11 +34,11 @@
     "framer-motion": "^11.3.28",
     "get-starknet-core": "^3.3.0",
     "js-sha256": "^0.11.0",
-    "next": "latest",
+    "next": "15.1.7",
     "nostr-tools": "^2.7.0",
     "qs": "^6.12.3",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-icons": "^5.5.0",
     "react-transition-group": "^4.4.5",
     "react-use-websocket": "^4.8.1",
