--- a/packages/supabase-db/package.json
+++ b/packages/supabase-db/package.json
@@ -1,57 +1,32 @@
 {
-  "name": "pwa",
+  "name": "@afk/supabase-db",
   "version": "0.1.0",
   "private": true,
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "dev": "next dev",
-    "start": "next start",
-    "build:app": "pnpm run build:nostr_sdk && next build",
-    "build": "next build",
-    "build:nostr_sdk": "cd ../.. && pnpm run build:nostr_sdk",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
-    "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
-    "ts:check": "tsc --noEmit",
-    "validate": "pnpm run lint:fix && pnpm run build",
-    "safe-build": "pnpm run build || echo 'Build failed but continuing...'"
+    "build": "tsc",
+    "dev": "tsc --watch",
+    "lint": "eslint . --ext .ts",
+    "clean": "rm -rf dist",
+    "db:init": "pnpm supabase init",
+    "db:start": "pnpm supabase start",
+    "db:stop": "pnpm supabase stop",
+    "db:reset": "pnpm supabase db reset",
+    "db:push": "pnpm supabase db push",
+    "db:pull": "pnpm supabase db pull",
+    "db:diff": "pnpm supabase db diff",
+    "db:new-migration": "pnpm supabase migration new",
+    "db:status": "pnpm supabase status"
   },
   "dependencies": {
-    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.8",
-    "axios": "^1.7.2",
-    "common": "workspace:*",
-    "dexie": "^4.0.11",
-    "dexie-react-hooks": "^1.1.7",
-    "starknet": "6.21.1",
-    "starknetkit": "2.10.4",
-    "viem": "~2.21.2",
-    "wagmi": "^2.13.4",
-    "yup": "^1.6.1",
-    "zod": "^3.23.8",
-    "zustand": "^4.5.2"
-  },
-  "peerDependencies": {
-    "next": "15.1.7",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "supabase": "^2.23.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@capacitor/cli": "7.2.0",
-    "@types/node": "^20",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "@uniswap/eslint-config": "^1.2.0",
-    "autoprefixer": "^10.4.19",
+    "@types/node": "^20.11.24",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.4",
-    "framer-motion": "^11.2.4",
-    "postcss": "^8.4.38",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5",
-    "web-vitals": "^2.1.4"
-  },
-  "packageManager": "pnpm@10.10.0"
+    "typescript": "^5"
+  }
 }
