--- a/apps/data-backend/.env.example
+++ b/apps/data-backend/.env.example
@@ -54,7 +54,13 @@ PINATA_SECRET_API_KEY=""
 IPFS_GATEWAY="https://ipfs.io"
 
 
+SUPABASE_URL=https://
+SUPABASE_ANON_KEY=anonkey
+          
+            
+SUPABASE_PASSWORD=a
 
+SUPABASE_SERVICE_KEY=service_role_key
 
 
 
