--- a/apps/data-backend/.env.example
+++ b/apps/data-backend/.env.example
@@ -48,10 +48,19 @@ TWITTER_CALLBACK_URL="http://localhost:8081/app/SocialPayment"
 TWITTER_CLIENT_ID=""
 TWITTER_CLIENT_SECRET=""
 
+PINATA_API_KEY=""
+
+PINATA_SECRET_API_KEY=""
+IPFS_GATEWAY="https://ipfs.io"
 
 
+SUPABASE_URL=https://
+SUPABASE_ANON_KEY=anonkey
+          
+            
+SUPABASE_PASSWORD=a
 
-
+SUPABASE_SERVICE_KEY=service_role_key
 
 
 
