--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -25,6 +25,7 @@
     "@capacitor/core": "7.2.0",
     "@cartridge/connector": "^0.7.13",
     "@cartridge/controller": "^0.7.13",
+    "@cashu/cashu-ts": "2.4.1",
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
@@ -47,6 +48,7 @@
     "afk_nostr_sdk": "workspace:*",
     "afk_react_sdk": "workspace:*",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.9",
     "classnames": "2.5.1",
     "common": "workspace:*",
     "d3": "^7.9.0",
@@ -61,6 +63,7 @@
     "qs": "^6.12.3",
     "quill": "2.0.3",
     "react": "19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.0.0",
     "react-qr-code": "^2.0.15",
     "react-transition-group": "^4.4.5",
