--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -36,12 +36,14 @@
     "@funkit/api-base": "^1.3.2",
     "@supabase/supabase-js": "^2.49.8",
     "@telegraf/types": "^7.1.0",
+    "apify-client": "^2.12.4",
     "apollo-server": "^3.13.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.40.1",
+    "exa-js": "^1.7.2",
     "fastify": "^5.1.0",
     "fastify-plugin": "^5.0.1",
     "fastify-socket.io": "^5.1.0",
