work algo script check

--- a/apps/algo-backend/package.json
+++ b/apps/algo-backend/package.json
@@ -38,7 +38,10 @@
     "@langchain/openai": "^0.3.10",
     "@langchain/pinecone": "^0.2.0",
     "@nostr-dev-kit/ndk": "2.10.1",
+    "ai": "^4.3.16",
+    "@openrouter/ai-sdk-provider": "^0.7.0",
     "@pinecone-database/pinecone": "^5.1.1",
+    "agent-twitter-client": "^0.0.18",
     "@prisma/client": "^5.22.0",
     "@telegraf/types": "^7.1.0",
     "apify-client": "^2.12.4",
