--- a/apps/algo-backend/.env.example
+++ b/apps/algo-backend/.env.example
@@ -5,9 +5,33 @@ PINECODE_API_KEY="pc"
 OPENAI_API_KEY="sk-proj-1234567890"
 
 
-TELEGRAM_WEB_APP="https://tg.afk-community.xyz"
+PORT=5000
+
+LANGSMITH=""
+
+
+EXA_API_KEY=""
+
+
+GOOGLE_API_KEY=
+
+APIFY_API_KEY=
+
+
+SUPABASE_URL=https://.supabase.co
+SUPABASE_ANON_KEY=
+          
+SUPABASE_PASSWORD=
+
+SUPABASE_SERVICE_KEY=
+
+
+PINECONE_API_KEY=""
 
 INDEXER_DATABASE_URL="postgresql://postgres:postgres@localhost:5434/indexer"
+
+
+TELEGRAM_WEB_APP="https://tg.afk-community.xyz"
 TELEGRAM_BOT_TOKEN="TG_BOT_FATHER"
 TG_ADMIN_CHAT_ID=
 WEBHOOK_DOMAIN="https://data-backend.xyz"
@@ -15,19 +39,12 @@ WEBHOOK_DOMAIN="https://data-backend.xyz"
 BACKEND_DATABASE_URL="postgresql://postgres:postgres@localhost:5433/data-backend"
 APP_URL_WEB="http://localhost:8081"
 
-FUNKIT_API_KEY=
 
 #JWT
 JWT_SECRET=
 ACCESS_TOKEN_EXPIRY="30m"
 REFRESH_TOKEN_EXPIRY="7d"
 
-STRIPE_SERVER_API_KEY=
-
-# CLOUDINARY 
-CLOUDINARY_CLOUD_NAME=""
-CLOUDINARY_API_KEY=""
-CLOUDINARY_API_SECRET=""
 
 # Starknet
 STARKNET_RPC_PROVIDER_URL=""
@@ -36,13 +53,6 @@ RPC_NODE_API_KEY=""
 SN_NETWORK="SN_SEPOLIA"
 
 IS_TELEGRAM_BOT_RUNNING="false"
-# Cloudfare
-CLOUDFARE_ACCOUNT_ID=""
-CLOUDFARE_AUTH_TOKEN=""
-CLOUDFARE_R2_BUCKET=""
-CLOUDFARE_R2_ACCESS=""
-CLOUDFARE_R2_SECRET=""
-CLOUDFARE_R2_DOMAIN=""
 
 # Twitter
 
@@ -53,8 +63,29 @@ TWITTER_CALLBACK_URL="http://localhost:8081/app/SocialPayment"
 TWITTER_CLIENT_ID=""
 TWITTER_CLIENT_SECRET=""
 
-
-
 EXTERNAL_NOSTR_API="https://api.nostr.wine/"
 
-PORT=5000
+
+
+
+
+
+
+# OPTIONAL
+# Cloudfare
+CLOUDFARE_ACCOUNT_ID=""
+CLOUDFARE_AUTH_TOKEN=""
+CLOUDFARE_R2_BUCKET=""
+CLOUDFARE_R2_ACCESS=""
+CLOUDFARE_R2_SECRET=""
+CLOUDFARE_R2_DOMAIN=""
+
+
+# CLOUDINARY 
+CLOUDINARY_CLOUD_NAME=""
+CLOUDINARY_API_KEY=""
+CLOUDINARY_API_SECRET=""
+
+
+STRIPE_SERVER_API_KEY=
+FUNKIT_API_KEY=
