move algo + opti

--- a/apps/algo-backend/package.json
+++ b/apps/algo-backend/package.json
@@ -38,12 +38,14 @@
     "@langchain/openai": "^0.3.10",
     "@langchain/pinecone": "^0.2.0",
     "@nostr-dev-kit/ndk": "2.10.1",
-    "ai": "^4.3.16",
     "@openrouter/ai-sdk-provider": "^0.7.0",
     "@pinecone-database/pinecone": "^5.1.1",
-    "agent-twitter-client": "^0.0.18",
     "@prisma/client": "^5.22.0",
+    "@supabase/supabase-js": "^2.49.8",
     "@telegraf/types": "^7.1.0",
+    "@the-convocation/twitter-scraper": "0.17.0",
+    "agent-twitter-client": "^0.0.18",
+    "ai": "^4.3.16",
     "apify-client": "^2.12.4",
     "apollo-server": "^3.13.0",
     "bcryptjs": "^2.4.3",
@@ -67,7 +69,6 @@
     "nodemailer": "^6.9.16",
     "nostr-tools": "2.12.0",
     "pg": "^8.13.1",
-    "@supabase/supabase-js": "^2.49.8",
     "pg-promise": "^11.10.1",
     "prisma-db": "workspace:*",
     "puppeteer": "^24.8.2",
