--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -38,6 +38,7 @@
     "@telegraf/types": "^7.1.0",
     "apify-client": "^2.12.4",
     "apollo-server": "^3.13.0",
+    "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
