--- a/apps/pwa/.env.example
+++ b/apps/pwa/.env.example
@@ -36,3 +36,7 @@ NEXT_PUBLIC_INDEXER_BACKEND_URL="http://localhost:5050"
 
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
+
+
+RECLAIM_APP_ID=""
+RECLAIM_API_KEY=""
