--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -37,6 +37,8 @@
     "@nostr-dev-kit/ndk-wallet": "^0.5.13",
     "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^2.1.5",
+    "@reclaimprotocol/js-sdk": "^4.2.0",
+    "@reclaimprotocol/zk-fetch": "^0.3.3",
     "@scure/bip32": "^1.7.0",
     "@solana/web3.js": "^1.98.2",
     "@starknet-io/get-starknet-core": "4.0.4",
