--- a/apps/mobile-mvp/package.json
+++ b/apps/mobile-mvp/package.json
@@ -20,8 +20,10 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "afk_nostr_sdk": "workspace:*",
+    "crypto-es": "^2.1.0",
     "dexie": "^4.0.11",
     "expo": "~53.0.12",
+    "expo-av": "^15.1.6",
     "expo-blur": "~14.1.5",
     "expo-camera": "^16.1.8",
     "expo-checkbox": "^4.1.4",
@@ -39,11 +41,15 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.9",
     "expo-web-browser": "~14.2.0",
+    "pbkdf2": "^3.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-markdown-display": "^7.0.2",
+    "react-native-modalize": "^2.1.1",
     "react-native-nfc-manager": "^3.16.1",
+    "react-native-portalize": "^1.0.7",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
