--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -54,6 +54,8 @@
     "d3": "^7.9.0",
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "ethers": "^6.13.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.28",
