--- a/pixel-backend/indexer/Dockerfile.prod.factory
+++ b/pixel-backend/indexer/Dockerfile.prod.factory
@@ -19,4 +19,8 @@ ARG NFT_CONTRACT_ADDRESS
 
 ENV NFT_CONTRACT_ADDRESS=${NFT_CONTRACT_ADDRESS}
 
-CMD ["run", "factory-script.js", "--allow-env", "--allow-env-from-env", "CONSUMER_TARGET_URL,APIBARA_STREAM_URL,PERSIST_TO_REDIS,INDEXER_ID,CANVAS_FACTORY_CONTRACT_ADDRESS", "--allow-net", "--sink-id", "canvas-factory-sink-id"]
+ARG STARTING_BLOCK
+
+ENV STARTING_BLOCK=${STARTING_BLOCK}
+
+CMD ["run", "factory-script.js", "--allow-env", "--allow-env-from-env", "CONSUMER_TARGET_URL,APIBARA_STREAM_URL,PERSIST_TO_REDIS,INDEXER_ID,CANVAS_FACTORY_CONTRACT_ADDRESS,STARTING_BLOCK", "--allow-net", "--sink-id", "canvas-factory-sink-id"]
