--- a/pixel-backend/indexer/Dockerfile.worlds.prod
+++ b/pixel-backend/indexer/Dockerfile.worlds.prod
@@ -19,5 +19,8 @@ ARG NFT_CONTRACT_ADDRESS
 
 ENV NFT_CONTRACT_ADDRESS=${NFT_CONTRACT_ADDRESS}
 
+ARG STARTING_BLOCK
 
-CMD ["run", "worlds-script.js", "--allow-env", "--allow-env-from-env", "CONSUMER_TARGET_URL,APIBARA_STREAM_URL,PERSIST_TO_REDIS,INDEXER_ID,CANVAS_FACTORY_CONTRACT_ADDRESS,NFT_CONTRACT_ADDRESS", "--allow-net", "--sink-id", "canvas-worlds-sink-id"]
+ENV STARTING_BLOCK=${STARTING_BLOCK}
+
+CMD ["run", "worlds-script.js", "--allow-env", "--allow-env-from-env", "CONSUMER_TARGET_URL,APIBARA_STREAM_URL,PERSIST_TO_REDIS,INDEXER_ID,CANVAS_FACTORY_CONTRACT_ADDRESS,NFT_CONTRACT_ADDRESS,STARTING_BLOCK", "--allow-net", "--sink-id", "canvas-worlds-sink-id"]
