fix mobile buffer wit entry load

--- a/apps/mobile-mvp/package.json
+++ b/apps/mobile-mvp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobile-mvp",
-  "main": "expo-router/entry",
+  "main": "entry.js",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -21,7 +21,6 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "afk_nostr_sdk": "workspace:*",
-    "buffer": "^6.0.3",
     "crypto-es": "^2.1.0",
     "dexie": "^4.0.11",
     "expo": "~53.0.12",
@@ -68,6 +67,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "buffer": "^6.0.3",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
