--- a/apps/mobile-mvp/package.json
+++ b/apps/mobile-mvp/package.json
@@ -43,6 +43,7 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.9",
     "expo-web-browser": "~14.2.0",
+    "metro-resolver": "^0.82.5",
     "pbkdf2": "^3.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
