--- a/apps/mobile-mvp/app.json
+++ b/apps/mobile-mvp/app.json
@@ -20,8 +20,11 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "server",
+      "output": "static",
       "favicon": "./assets/images/favicon.png"
+    },
+    "router": {
+      "origin": "./app/_layout.tsx"
     },
     "plugins": [
       "expo-router",
