--- a/mobile/package.json
+++ b/mobile/package.json
@@ -50,7 +50,7 @@
     "@lexical/react": "^0.29.0",
     "@metamask/sdk": "~0.30.0",
     "@noble/curves": "^1.4.0",
-    "@nostr-dev-kit/ndk": "2.10.1",
+    "@nostr-dev-kit/ndk": "^2.14.9",
     "@nostr-dev-kit/ndk-wallet": "^0.2.0",
     "@rainbow-me/rainbowkit": "^2.1.5",
     "@react-native-async-storage/async-storage": "^1.23.1",
