--- a/apps/algo-backend/package.json
+++ b/apps/algo-backend/package.json
@@ -49,6 +49,7 @@
     "apify-client": "^2.12.4",
     "apollo-server": "^3.13.0",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.1.0",
     "common": "workspace:*",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
