--- a/apps/algo-backend/package.json
+++ b/apps/algo-backend/package.json
@@ -37,7 +37,7 @@
     "@langchain/ollama": "^0.2.0",
     "@langchain/openai": "^0.3.10",
     "@langchain/pinecone": "^0.2.0",
-    "@nostr-dev-kit/ndk": "2.10.1",
+    "@nostr-dev-kit/ndk": "^2.14.9",
     "@openrouter/ai-sdk-provider": "^0.7.0",
     "@pinecone-database/pinecone": "^5.1.1",
     "@prisma/client": "^5.22.0",
@@ -49,6 +49,7 @@
     "apify-client": "^2.12.4",
     "apollo-server": "^3.13.0",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.1.0",
     "common": "workspace:*",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
