--- a/apps/mobile-mvp/app.json
+++ b/apps/mobile-mvp/app.json
@@ -23,6 +23,9 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
+    "router": {
+      "origin": "./app/_layout.tsx"
+    },
     "plugins": [
       "expo-router",
       [
