--- a/apps/mobile-mvp/package.json
+++ b/apps/mobile-mvp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobile-mvp",
-  "main": "expo-router/entry",
+  "main": "entry.js",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -43,6 +43,7 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.9",
     "expo-web-browser": "~14.2.0",
+    "metro-resolver": "^0.82.5",
     "pbkdf2": "^3.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -67,6 +68,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "buffer": "^6.0.3",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
