--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -13,7 +13,7 @@
     },
     "ts-node": {
       // Tell ts-node CLI to install the --loader automatically
-      "esm": true
+    //   "esm": true
     },
     "include": ["**/*.ts",  "**/*.js", "test/**/*.ts"],
     "exclude": ["node_modules"]
