upgrade starknetkit + lib + fix

--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -18,13 +18,13 @@
   },
   "dependencies": {
     "@argent/tma-wallet": "1.19.3",
-    "@argent/x-sessions": "^6.7.4",
+    "@argent/x-sessions": "8.0.1",
     "@atomiqlabs/chain-starknet": "^1.0.9",
     "@atomiqlabs/sdk": "^3.0.4",
     "@avnu/avnu-sdk": "^2.0.0",
     "@capacitor/core": "7.2.0",
-    "@cartridge/connector": "^0.7.13",
-    "@cartridge/controller": "^0.7.13",
+    "@cartridge/connector": "^0.9.0",
+    "@cartridge/controller": "^0.9.0",
     "@cashu/cashu-ts": "2.4.1",
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/next-js": "^2.2.0",
@@ -71,8 +71,8 @@
     "react-transition-group": "^4.4.5",
     "react-use-websocket": "^4.8.1",
     "sass": "^1.87.0",
-    "starknet": "6.21.1",
-    "starknetkit": "2.10.4",
+    "starknet": "7.5.1",
+    "starknetkit": "3.0.0",
     "viem": "~2.21.2",
     "wagmi": "^2.13.4",
     "yup": "^1.6.1",
