--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -2,6 +2,7 @@
   "name": "website",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@10.10.0",
   "scripts": {
     "dev": "next dev",
     "start": "next start",
@@ -25,8 +26,9 @@
     "@nostr-dev-kit/ndk": "^2.14.9",
     "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^2.1.5",
-    "@starknet-react/chains": "^0.1.7",
-    "@starknet-react/core": "^2.8.2",
+    "@starknet-io/get-starknet-core": "4.0.4",
+    "@starknet-react/chains": "^3.1.3",
+    "@starknet-react/core": "^3.7.4",
     "@tanstack/react-query": "^5.40.0",
     "common": "workspace:*",
     "d3": "^7.9.0",
@@ -43,7 +45,7 @@
     "react-transition-group": "^4.4.5",
     "react-use-websocket": "^4.8.1",
     "starknet": "6.9.0",
-    "starknetkit-next": "npm:starknetkit@2.3.0",
+    "starknetkit": "3.0.0",
     "viem": "~2.21.2",
     "wagmi": "^2.12.8",
     "zod": "^3.23.8",
