--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -61,8 +61,8 @@
     "eslint-config-next": "^14.2.4",
     "framer-motion": "^11.2.4",
     "postcss": "^8.4.38",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5",
     "web-vitals": "^2.1.4"
