--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -53,8 +53,8 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
     "@uniswap/eslint-config": "^1.2.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
