--- a/packages/indexer-v2-db/package.json
+++ b/packages/indexer-v2-db/package.json
@@ -2,11 +2,11 @@
   "name": "indexer-v2-db",
   "version": "0.0.1",
   "private": true,
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": "./dist/index.js",
-    "./schema": "./dist/schema.js",
-    "./dist": "./dist/index.js",
-    "./dist/schema": "./dist/schema.js"
+    "./schema": "./dist/schema.js"
   },
   "scripts": {
     "build": "tsc",
