--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -61,6 +61,7 @@
     "js-sha256": "^0.11.0",
     "markdown-it": "^14.1.0",
     "next-auth": "^4.24.11",
+    "nostr-tools": "^2.7.0",
     "qs": "^6.12.3",
     "quill": "2.0.3",
     "react": "19.0.0",
