wip fix package build

--- a/packages/indexer-prisma/package.json
+++ b/packages/indexer-prisma/package.json
@@ -5,15 +5,15 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx prisma generate && npx prisma db push && tsc",
-    "build:push": "npx prisma generate && npx prisma db push && tsc",
-    "build:pull": "npx prisma generate && npx prisma db pull && tsc",
-    "generate": "npx prisma generate",
-    "pull": "npx prisma db pull",
-    "push": "npx prisma db push",
-    "migrate": "npx prisma migrate dev",
-    "migrate:prod": "npx prisma migrate deploy",
-    "diff": "npx prisma migrate diff"
+    "build": "pnpm prisma generate && pnpm prisma db push && tsc",
+    "build:push": "pnpm prisma generate && pnpm prisma db push && tsc",
+    "build:pull": "pnpm prisma generate && pnpm prisma db pull && tsc",
+    "generate": "pnpm prisma generate",
+    "pull": "pnpm prisma db pull",
+    "push": "pnpm prisma db push",
+    "migrate": "pnpm prisma migrate dev",
+    "migrate:prod": "pnpm prisma migrate deploy",
+    "diff": "pnpm prisma migrate diff"
   },
   "keywords": [],
   "author": "",
