--- a/packages/prisma-db/package.json
+++ b/packages/prisma-db/package.json
@@ -5,11 +5,11 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx prisma generate && npx prisma db push && tsc",
-    "build:push": "npx prisma generate && npx prisma db push && tsc",
-    "generate": "npx prisma generate",
-    "pull": "npx prisma db pull",
-    "push": "npx prisma db push"
+    "build": "pnpm prisma generate && pnpm prisma db push && tsc",
+    "build:push": "pnpm prisma generate && pnpm prisma db push && tsc",
+    "generate": "pnpm prisma generate",
+    "pull": "pnpm prisma db pull",
+    "push": "pnpm prisma db push"
   },
   "keywords": [],
   "author": "",
