--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -58,6 +58,7 @@
     "ethers": "^6.13.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.28",
+    "hls.js": "^1.6.11",
     "js-sha256": "^0.11.0",
     "markdown-it": "^14.1.0",
     "next-auth": "^4.24.11",
