--- a/apps/indexer-v2/tsconfig.json
+++ b/apps/indexer-v2/tsconfig.json
@@ -11,6 +11,9 @@
     "paths": {
       "@/*": [
         "./*"
+      ],
+      "common/*": [
+        "../../packages/common/src/*"
       ]
     },
     "lib": [
