try fix vercel deploy

--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "packageManager": "pnpm@10.10.0",
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
     "dev": "next dev",
     "start": "next start",
