--- a/apps/pwa/vercel.json
+++ b/apps/pwa/vercel.json
@@ -1,6 +1,5 @@
 {
-  "buildCommand": "cd ../.. && pnpm install --no-frozen-lockfile && pnpm run build:nostr_sdk && cd apps/pwa && pnpm run build",
-  "installCommand": "cd ../.. && pnpm install --no-frozen-lockfile",
+  "installCommand": "pnpm install --no-frozen-lockfile",
   "env": {
     "NPM_RC": "shamefully-hoist=true\nregistry=https://registry.npmjs.org/\nstrict-peer-dependencies=false\nauto-install-peers=true",
     "PNPM_VERSION": "10.16.1",
