--- a/apps/pwa/vercel.json
+++ b/apps/pwa/vercel.json
@@ -1,9 +1,7 @@
 {
   "installCommand": "pnpm install",
   "env": {
-    "NPM_RC": "shamefully-hoist=true\nregistry=https://registry.npmjs.org/\nstrict-peer-dependencies=false\nauto-install-peers=true",
-    "PNPM_VERSION": "10.16.1",
-    "NODE_OPTIONS": "--max-old-space-size=4096"
+    "PNPM_VERSION": "10.16.1"
   }
 }
   
