--- a/apps/pwa/vercel.json
+++ b/apps/pwa/vercel.json
@@ -1,7 +1,8 @@
 {
   "env": {
     "PNPM_VERSION": "10.16.1",
-    "VERCEL_NODE_VERSION": "22"
+    "VERCEL_NODE_VERSION": "22",
+    "ENABLE_EXPERIMENTAL_COREPACK": "1"
   }
 }
   
