--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -2,7 +2,7 @@
   "name": "pwa",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "pnpm@10.16.1",
+  "packageManager": "pnpm@10.16.1+sha512.0e155aa2629db8672b49e8475da6226aa4bdea85fdcdfdc15350874946d4f3c91faaf64cbdc4a5d1ab8002f473d5c3fcedcd197989cf0390f9badd3c04678706",
   "engines": {
     "node": "22.x"
   },
@@ -105,5 +105,4 @@
     "typescript": "^5",
     "web-vitals": "^2.1.4"
   }
-  
 }
