--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -81,7 +81,9 @@
     "wagmi": "^2.13.4",
     "yup": "^1.6.1",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "@getalby/sdk": "^3.6.1"
+
   },
   "peerDependencies": {
     "next": "15.1.7",
