--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -82,7 +82,8 @@
     "yup": "^1.6.1",
     "zod": "^3.23.8",
     "zustand": "^4.5.2",
-    "@getalby/sdk": "^3.6.1"
+    "@getalby/sdk": "^3.6.1",
+    "@getalby/lightning-tools": "^5.0.3"
 
   },
   "peerDependencies": {
