--- a/apps/pwa/.npmrc
+++ b/apps/pwa/.npmrc
@@ -1,2 +1,9 @@
 shamefully-hoist=true
 registry=https://registry.npmjs.org/
+strict-peer-dependencies=false
+auto-install-peers=true
+prefer-offline=true
+fetch-retries=3
+fetch-retry-factor=2
+fetch-retry-mintimeout=10000
+fetch-retry-maxtimeout=60000
