--- a/apps/pwa/vercel.json
+++ b/apps/pwa/vercel.json
@@ -1,10 +1,8 @@
 {
-    "env": {
-      "NPM_RC": "shamefully-hoist=true",
-      "PNPM_VERSION": "10.10.0",
-      "installCommand": "pnpm install"
-
-    }
-  
+  "env": {
+    "PNPM_VERSION": "10.16.1",
+    "NODE_VERSION": "20",
+    "ENABLE_EXPERIMENTAL_COREPACK": "1"
   }
+}
   
