--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "packages/*"
   ],
   "prisma": {},
+  "packageManager": "pnpm@10.16.1+sha512.0e155aa2629db8672b49e8475da6226aa4bdea85fdcdfdc15350874946d4f3c91faaf64cbdc4a5d1ab8002f473d5c3fcedcd197989cf0390f9badd3c04678706",
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "build": "turbo run build",
     "build:website": "cd apps/website && pnpm run build",
     "dev:website": "cd apps/website && pnpm run dev",
@@ -95,10 +100,6 @@
     "tsup": "^8.0.2",
     "typescript": "~5.3.3"
   },
-  "engines": {
-    "node": ">=14.0.0"
-  },
-  "packageManager": "pnpm@10.10.0",
   "pnpm": {
     "onlyBuiltDependencies": [
       "@apollo/protobufjs",
